--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  : #code-ZxFK3f4pfb
 # Site Author
 author:
   name             : "xuxz23"
-  avatar           : "images/profile.jpeg"
+  avatar           : "images/android-chrome-192x192.png"
   bio              : 
   location         : "Stanford, CA"
   employer         :
