--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "xuxz23"
+title                    : "Xiangzhe Xu"
 description              : "Second year undergraduate student in Economics"
 repository               : "xuxz23/xuxz23.github.io"
 google_scholar_stats_use_cdn : true
