--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  : #code-ZxFK3f4pfb
 
 # Site Author
 author:
-  name             : "xuxz23"
+  name             : "Xiangzhe Xu"
   avatar           : "images/android-chrome-192x192.png"
   bio              : 
   location         : "Tsinghua, Beijing"
